// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground/> should render with background dark 1`] = `
.c0 {
  background-color: #FFF;
  color: #0a1128;
  background-color: #0a1128;
  color: #FFF;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 4.0rem;
}

<div>
  <div
    class="c0"
    id=""
  >
    <div
      class="c1"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;

exports[`<SectionBackground/> should render with background light 1`] = `
.c0 {
  background-color: #FFF;
  color: #0a1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 4.0rem;
}

<div>
  <div
    class="c0"
    id=""
  >
    <div
      class="c1"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;
